text-overflow fixed elements title

--- a/blocks/element/__title-section/element__title-section.css
+++ b/blocks/element/__title-section/element__title-section.css
@@ -1,7 +1,6 @@
 .element__title-section {
     max-width: 246px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     padding: 0;
