--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,4 +1,5 @@
 .element__title {
+    width: 198px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
